Initialize Project Structure

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.test_impack">
    <application
-        android:label="test_impack"
+        android:label="Test Impack"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
